


beta 0.9 (in development)
-------------------------
- new mode "--density" allows to compute a 1-D, 2-D or 3-D density profile of a given property (mass, electric charge...).
- new mode "--central-symmetry" allows to compute a central symmetry parameter.
- new option "-neutralize"
- added support for ionic core-shell models in LAMMPS data and custom files. Also added support for 2-D systems in these file formats.
- fixed a bug in the displaying of progress bar that slowed down the program.


beta 0.8.1 (09 April 2015)
--------------------------
- in mode "--create", added possibility to generate L12 lattices. Thanks to J. Amodeo (MATEIS, Lyon, France), for proposing this feature.
- fixed a bug in option "-dislocation" that prevented to read the Burgers vector when the type was "edge2". Thanks to A. Pal (Rensselaer Polytechnic Institute, New York, USA), for reporting this bug.


beta 0.8 (05 Jan. 2015)
-----------------------
- many changes make this version incompatible with branch 0.7. Source files were re-organized. The main Makefile was modified (simplified), new Makefiles were added in sub-directories for better dependency support. Also fixed many issues with the compilation on Microsoft(R) Windows(R) systems.
- from now on, both 32-bits and 64-bits static binaries will be available for GNU/Linux platforms.
- new mode "--average" allows to average atom positions over a list of configurations.
- new mode "--interpolate" allows to generate a chain of configurations between two given configurations.
- new mode "--nye" allows to compute the Nye tensor. Thanks to P. Carrez (UMET, Lille, France) for implementing this mode.
- new mode "--polycrystal" allows to generate a 2-D or 3-D polycrystal from a unit cell using the Voronoi method. Positions and crystallographic orientations of the grains can be explicitely given, or randomly generated.
- added support for both reading and writing XMD files (*.xmd).