@@ -25,6 +25,8 @@
 
 <p><code>-select &#60;indice1&#62;,&#60;indice2&#62;,&#60;indice3&#62;:&#60;indice4&#62;,...</code></p>
 
+<p><code>-select list &#60;fichier&#62;</code></p>
+
 <p><code>-select random &#60;N&#62; &#60;espèce&#62;</code></p>
 
 <p><code>-select &#60;above|below&#62; &#60;d&#62; &#60;dir&#62;</code></p>
@@ -51,6 +53,8 @@
 <p>Lorsque <strong>-select &#60;espèce&#62;</strong> est utilisé tous les atomes de l'espèce donnée sont sélectionnés. L'espèce chimique doit être désignée par son symbole chimique (e.g. Al, Si, C, Cu...).</p>
 
 <p>Lorsque <strong>-select &#60;indice&#62;</strong> est utilisé (où &#60;indice&#62; est un entier), seul l'atome ayant l'indice correspondant est sélectionné. Plusieurs indices peuvent être donnés en les séparant par des virgules. Une plage d'indices peut être définie par deux entiers séparés par deux-points.</p>
+
+<p>Lorsque <strong>-select list &#60;fichier&#62;</strong> est utilisé, la liste d'atomes à sélectionner est lue depuis le &#60;fichier&#62;. Le &#60;fichier&#62; doit être un fichier texte contenant un indice atomique (nombre entier) par ligne.</p>
 
 <p>En utilisant <strong>-select random</strong>, N atomes de l'&#60;espèce&#62; donnée sont sélectionnés au hasard (où N est un nombre entier). Si N est un nombre réel suivi du symbole "%" alors ce pourcentage d'atomes sera sélectionné. Si &#60;espèce&#62; vaut "any" ou "all" alors N atomes sont sélectionnés au hasard quelle que soit leur espèce chimique. Notez que cette option tente de définir des indices au hasard, elle est donc largement non-reproductible, c-à-d. qu'en partant du même système et en appliquant cette option il est très probable d'obtenir des résultats différents.</p>
 
