@@ -12,6 +12,7 @@ beta 0.9 (in development)
 - new mode "--density" allows to compute a 1-D, 2-D or 3-D density profile of a given property (mass, electric charge...).
 - new mode "--central-symmetry" allows to compute a central symmetry parameter.
 - new option "-neutralize"
+- in option "-select", added possibility to read a list of atom indices from a file.
 - added support for ionic core-shell models in LAMMPS data and custom files. Also added support for 2-D systems in these file formats.
 - fixed a bug in the displaying of progress bar that slowed down the program.
 
